# DeliveryTracker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  fly.toml.example
bot/: Cargo.toml  build.rs
bot/src/: command.rs  command_handler.rs  dialogue.rs  dialogue_handler.rs  lib.rs  main.rs  telegram.rs
bot/src/dialogue/: mod.rs
bot/src/dialogue/states/: mod.rs  nothing.rs  receive_tracking_number.rs  start.rs
proto/: tracker.proto
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs  structs.rs
server/src/couriers/: mod.rs
server/src/couriers/cn/: mod.rs
server/src/couriers/kr/: chunil.rs  cjlogistics.rs  daesin.rs  epost.rs  epostems.rs  ilyanglogis.rs  logen.rs  mod.rs
server/src/couriers/us/: fedex.rs  mod.rs  warpex.rs
src/: api.rs  delivery_status.rs  graphql.rs  lib.rs  macros.rs  main.rs  status_struct.rs  structs.rs  tracking_status.rs
src/couriers/: cainiao.rs  cjlogistics.rs  courier.rs  cupost.rs  epost.rs  fedex.rs  gspostbox.rs  hanjin.rs  ilogen.rs  lotte.rs  mod.rs
src/couriers/cn/: cainiao.rs  mod.rs
src/couriers/kr/: chunil.rs  cjlogistics.rs  cupost.rs  daesin.rs  epostems.rs  gspostbox.rs  hanjin.rs  ilyanglogis.rs  kyoungdong.rs  logen.rs  lotte.rs  mod.rs
src/couriers/us/: mod.rs  warpex.rs
