[package]
name = "deliverytracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json", "cookies"] }
async-trait = "0.1.51"
serde_json = "1.0.72"
once_cell = "1.8.0"
nipper = "0.1.9"
regex = "1.5.4"
tide = "0.16.0"
eyre = "0.6.5"