[package]
name = "deliverytracker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deliverytracker-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json", "cookies"] }
pretty_env_logger = "0.4.0"
async-trait = "0.1.51"
serde_json = "1.0.72"
once_cell = "1.8.0"
base64 = "0.13.0"
nipper = "0.1.9"
tonic = "0.6.1"
prost = "0.9.0"
regex = "1.5.4"
tide = "0.16.0"
log = "0.4.14"

[build-dependencies]
tonic-build = "0.6.0"