[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread"], default-features = false }
reqwest = { version = "0.11.7", features = ["json", "cookies"] }
pretty_env_logger = "0.4.0"
async-trait = "0.1.51"
serde_json = "1.0.72"
chrono-tz = "0.6.0"
once_cell = "1.8.0"
encoding = "0.2.33"
base64 = "0.13.0"
chrono = "0.4.19"
nipper = "0.1.9"
tonic = "0.6.1"
prost = "0.9.0"
regex = "1.5.4"
tide = "0.16.0"
log = "0.4.14"

[build-dependencies]
tonic-build = "0.6.0"